				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================

2011/03/06
	* Rev. 14732 Added Universal Catalog Silver, Gold and Bronze and their respective boxes. [Ai4rei]
	- Updated packet info related to search store info.
2011/02/19
	* Rev. 14713 Database updates required by buying store system implementation. [Ai4rei]
	- Added database of items, that can be sold to a buying store (item_buyingstore.txt).
	- Added items Buy_Stall_Permit (6377) and Shabby_Purchase_Street_Stall_License (12548).
	- Updated packet database with buying store related packets.
	- Added skill 'Open Buying Store' (ALL_BUYING_STORE).
2011/02/06
	* Rev. 14697 Added the missing restricted skills to zone 6 for Endless Tower. (bugreport:4707) [L0ne_W0lf]
	* Adjusted the rates for item using bAddEffOnSkill bonus. 
2011/01/23
	* Rev. 14679 Updated Aegis NPC ID constants from current npcidentity.lub (bugreport:4706). [Ai4rei]
	- Fixes some incorrect NPC ID constants (since r12780).
2011/01/06
	* Rev. 14653 Updated mapcache once more, because the one from r14643 contained official xmas versions of the town maps, now causing glitches after the xmas event on kRO ended. [Ai4rei]
2011/01/04
	* Rev. 14650 Shuffled around disabled headgears, more accurate to what is and isn't avaliable in kRO. Snuck in a few minor fixes. [L0ne_W0lf]
	* Rev. 14649 Disabled monster BACSOJIN_T (1996) whose drop White Snake Hat (5411) is not enabled (was hidden by '//', which would cause errors now) (since r14412). [Ai4rei]
2010/12/30
	* Rev. 14643 Updated mapcache up to 2010-12-01. Adds Bifrost, Dewata and Malangdo maps. [Ai4rei]
	* Rev. 14641 Bug fixes. Not much else. :3